multicontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapplication
  namespace: google
  labels:
    apptype: web
    env: dev
spec:
  volumes:
  - name: commonvolume
    emptyDir: {}
  containers:
    - name: webcontainer
      image: httpd:latest
      imagePullPolicy: Always
      ports:
        - containerPort: 80
          name: apache
          protocol: TCP
      resources:
        requests:
          cpu: "200m"
          memory: "200Mi"
        limits:
          cpu: "400m"
          memory: "300Mi"
      volumeMounts:
      - mountPath: /usr/local/apache2/htdocs
        name: commonvolume
    - name: sidecarfiler
      image: prasad193/webnew:v1
      imagePullPolicy: Always
      volumeMounts:
        - mountPath: /data
          name: commonvolume
      command: ["/bin/sh"]
      args: ["-c", "while true; do echo $(hostname)$(date) >>/data/index.html ; sleep 3; done"]
---
apiVersion: v1
kind: Service
metadata:
  name: webservice
  namespace: google
spec:
  type: LoadBalancer
  ports:
    - name: apache
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    apptype: web
    env: dev
